--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3"
+  },
+  "dependencies": {
+    "playwright-extra": "^4.3.6",
+    "puppeteer": "^24.34.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
+    "puppeteer-extra-plugin-font-size": "^2.3.3",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
