--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,6 +33,7 @@ jobs:
       # ---------------------------------------------------------
       - name: Student onboarding positive
         run: |
+          npx playwright test dashboard-positive-registration-finish.spec.ts
           npx playwright test onboarding-process-positive-student-role.spec.ts
           npx playwright test dashboard-positive-registration-finish.spec.ts
 
